feat: Bump Cosmos SDK to v0.46.10 [DEV-2290] (#556)
* Fix Dockerfile make statements

* Update cleanup-actions.yml

* Bump Goreleaser

* Update dispatch.yml

* Temporary build statement

* Fix make install and rlcp

* Combined build with CGO_ENABLED=0

* Move to 0.46.10 cosmos-sdk

* Get linter version back

* Add findutils for Docker building

* Manual sync packages from cheqd-node for api subpackage

* Update README.md

* Get tests back

* bump package lock

* Update buf.lock

* Update .goreleaser.yml

* Add gofumpt to make swagger

* Fix build statement

* Target specific builds in goreleaser

* Update Dockerfile

* Update Makefile

* Move flies app/client/docs

* Update .gitignore

* Switch to app/client/docs

* Update protoc-swagger-gen.sh

* Update build.yml

* Update .gitignore

* Update go.mod

* Update go.sum

* Update app.go

* Move files

* Update .gitignore

* Delete query.swagger.json

* Delete query.swagger.json

* Update config.yaml

* Create statik.go

* Update app.go

* Update api/go.mod

* Update go.work.sum

---------

Co-authored-by: Andrew Nikitin <andrew.nikitin@cheqd.io>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,13 +25,13 @@ jobs:
         with:
           distribution: goreleaser
           version: latest
-          args: build --clean --snapshot --id ubuntu-latest-amd64
+          args: build --clean --snapshot --single-target
 
       - name: Store artifact
         uses: actions/upload-artifact@v3
         with:
           name: cheqd-noded
-          path: dist/ubuntu-latest-amd64_linux_amd64_v1/cheqd-noded
+          path: dist/linux-amd64_linux_amd64_v1/cheqd-noded
 
   build-docker:
     name: "Docker image"
