Temporarily turn off dispatch

--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -7,26 +7,26 @@ concurrency:
 
 jobs:
 
-  call-lint:
-    name: "Lint"
-    uses: ./.github/workflows/lint.yml
-    secrets: inherit
+  # call-lint:
+  #   name: "Lint"
+  #   uses: ./.github/workflows/lint.yml
+  #   secrets: inherit
 
-  call-build:
-    name: "Build"
-    needs: call-lint
-    uses: ./.github/workflows/build.yml
-    secrets: inherit
+  # call-build:
+  #   name: "Build"
+  #   needs: call-lint
+  #   uses: ./.github/workflows/build.yml
+  #   secrets: inherit
   
-  call-test:
-    name: "Tests"
-    needs: call-build
-    uses: ./.github/workflows/test.yml
-    secrets: inherit
+  # call-test:
+  #   name: "Tests"
+  #   needs: call-build
+  #   uses: ./.github/workflows/test.yml
+  #   secrets: inherit
 
   call-release:
     name: "Release"
-    needs: call-test
-    if: ${{ github.ref_protected == true }}
+    # needs: call-test
+    # if: ${{ github.ref_protected == true }}
     uses: ./.github/workflows/release.yml
     secrets: inherit
