--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -129,7 +129,7 @@ jobs:
         # if: startsWith((git tag --contains ${{ github.sha }}), 'v')
         if: startsWith(git tag --contains 03089249874ed22139ec50ce564273c18a353835, 'v1')
         run: |
-          API_VERSION=$(git tag --contains 03089249874ed22139ec50ce564273c18a353835/v1/v2)
+          API_VERSION=${git tag --contains 03089249874ed22139ec50ce564273c18a353835/v1/api\/v2}
           echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
 
   release-docker:
