--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
     needs: super-lint
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
+      API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
     
     steps:
       - uses: actions/checkout@v3
@@ -65,6 +66,11 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+      
+      # Setup for pushing to Buf.build later
+      - uses: bufbuild/buf-setup-action@v1.14.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       # Required for short-lived token provided to Semantic Release
       - name: "Obtain Github App token"
@@ -85,7 +91,7 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         # Only run GoReleaser if the commit is tagged with a version
-        if: startsWith((git tag --contains ${{ github.sha }}), 'v')
+        if: startsWith((git describe --tags ${{ github.sha }}), 'v')
         with:
           distribution: goreleaser
           version: latest
@@ -98,24 +104,7 @@ jobs:
         run: |
           RELEASE_VERSION=$( git describe --tags "${{ github.sha }}")
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
-  
-  release-api-and-protobuf:
-    name: "API package and Protobufs"
-    runs-on: ubuntu-20.04
-    needs: release-binary
-    if: ${{ github.ref_protected != true }}
-    
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0 # Required to fetch version
-          persist-credentials: false
-
-      # Setup for pushing to Buf.build later
-      - uses: bufbuild/buf-setup-action@v1.14.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-
+      
       # Push Protobufs to Buf.build registry
       - uses: bufbuild/buf-push-action@v1
         with:
@@ -123,15 +112,20 @@ jobs:
           buf_token: ${{ secrets.BUF_TOKEN }}
           draft: ${{ github.ref_name != 'main'}}
       
-      # Check if there's a release tag for cheqd-node
+      # Check if there's a release tag for cheqd-node and set API version tag
       - name: "Set API package version tag"
         id: set-api-version
-        # if: startsWith((git tag --contains ${{ github.sha }}), 'v')
+        # if: startsWith((git describe --tags ${{ github.sha }}), 'v1')
         if: startsWith(git tag --contains 03089249874ed22139ec50ce564273c18a353835, 'v1')
         run: |
-          API_VERSION=${echo git tag --contains 03089249874ed22139ec50ce564273c18a353835/v1/api\/v2}
+          RELEASE_TAG=$( git describe --tags 03089249874ed22139ec50ce564273c18a353835)
+          API_VERSION=sed sed 's/v1/api\/v2/g' <<< "$RELEASE_TAG"
           echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
-
+          git tag -a "$API_VERSION" -m "API package version $API_VERSION [skip ci]"
+          git push origin "$API_VERSION" --dry-run
+        env:
+          GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
+  
   release-docker:
     name: "Docker image"
     needs: release-binary
