--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,13 +40,9 @@ jobs:
         VALIDATE_XML: true
         VALIDATE_YAML: true
 
-
-  release-binary:
-    name: "Node binary"
+  calculate-version:
+    name: "Calculate release version"
     runs-on: ubuntu-20.04
-    needs: super-lint
-    env:
-      COMMIT_TAG: git describe --tags ${{ github.sha }}
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
       API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
@@ -57,22 +53,12 @@ jobs:
           fetch-depth: 0 # Required to fetch version
           persist-credentials: false
 
-      - uses: actions/setup-go@v3
-        with:
-          go-version-file: ./go.mod
-          cache: true
-
       # Node.js setup is needed to run Semantic Release
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
-      
-      # Setup for pushing to Buf.build later
-      - uses: bufbuild/buf-setup-action@v1.14.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
 
       # Required for short-lived token provided to Semantic Release
       - name: "Obtain Github App token"
@@ -90,22 +76,63 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
+      - name: Set release version number
+        id: set-version
+        run: |
+          RELEASE_VERSION=$( git describe --tags "${{ github.sha }}")
+          echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
+      
+      # Check if there's a release tag for cheqd-node and set API version tag
+      - name: "Set API package version tag"
+        id: set-api-version
+        if: startsWith(${{ steps.set-version.outputs.RELEASE_VERSION }}, v1)
+        run: |
+          API_VERSION=sed sed 's/v1/api\/v2/g' <<< "${{ steps.set-version.outputs.RELEASE_VERSION }}"
+          echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
+
+
+  release-binary:
+    name: "Node binary"
+    runs-on: ubuntu-20.04
+    needs: calculate-version
+    if: startsWith(needs.calculate-version.outputs.RELEASE_VERSION, 'v')
+    env:
+      RELEASE_VERSION: ${{ needs.calculate-version.outputs.RELEASE_VERSION }}
+      API_VERSION: ${{ needs.calculate-version.outputs.API_VERSION }}
+    
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Required to fetch version
+          persist-credentials: false
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: ./go.mod
+          cache: true
+      
+      # Setup for pushing to Buf.build later
+      - uses: bufbuild/buf-setup-action@v1.14.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      # Required for short-lived token provided to Semantic Release
+      - name: "Obtain Github App token"
+        id: app-token
+        uses: getsentry/action-github-app-token@v2.0.0
+        with:
+          app_id: ${{ secrets.BOT_APP_ID }}
+          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         # Only run GoReleaser if the commit is tagged with a version
-        if: startsWith(${{ env.COMMIT_TAG }}, 'v')
         with:
           distribution: goreleaser
           version: latest
           args: release --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set release version number
-        id: set-version
-        run: |
-          RELEASE_VERSION=${{ env.COMMIT_TAG }}
-          echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
       
       # Push Protobufs to Buf.build registry
       - uses: bufbuild/buf-push-action@v1
@@ -115,26 +142,22 @@ jobs:
           draft: ${{ github.ref_name != 'main'}}
       
       # Check if there's a release tag for cheqd-node and set API version tag
-      - name: "Set API package version tag"
-        id: set-api-version
-        # if: startsWith((git describe --tags ${{ github.sha }}), 'v1')
-        if: startsWith((git describe --tags ${{ env.TEST_TAG }}), 'v1')
+      - name: "Push API package version tag"
+        id: push-api-version
         run: |
-          RELEASE_TAG=$( git describe --tags 03089249874ed22139ec50ce564273c18a353835)
-          API_VERSION=sed sed 's/v1/api\/v2/g' <<< "$RELEASE_TAG"
-          echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
-          git tag -a "$API_VERSION" -m "API package version $API_VERSION [skip ci]"
-          git push origin "$API_VERSION" --dry-run
+          git tag -a "${{ env.API_VERSION }}" -m "API package version ${{ env.API_VERSION }} [skip ci]"
+          git push origin "${{ env.API_VERSION }}" --dry-run
         env:
           GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
-          TEST_TAG: 03089249874ed22139ec50ce564273c18a353835
-  
+
+
   release-docker:
     name: "Docker image"
     needs: release-binary
     runs-on: ubuntu-20.04
     env:
       IMAGE_NAME: ${{ github.repository }}
+      RELEASE_VERSION: ${{ needs.calculate-version.outputs.RELEASE_VERSION }}
 
     steps:
       - uses: actions/checkout@v3
@@ -162,7 +185,7 @@ jobs:
           flavor: |
             latest=auto
           tags: |
-            type=semver,pattern={{version}},value=${{ needs.release-binary.outputs.RELEASE_VERSION }}
+            type=semver,pattern={{version}},value=${{ env.RELEASE_VERSION }}
             type=raw,value=production-latest
             type=sha,format=long
           labels: |
