--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
     runs-on: ubuntu-20.04
     outputs:
       RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
+      API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
     
     steps:
       - uses: actions/checkout@v3
@@ -82,6 +83,26 @@ jobs:
         run: |
           RELEASE_VERSION=$( git tag --list 'v*' --contains "${{ github.sha }}")
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
+      
+      # Check if there's a release tag for cheqd-node and set API version tag
+      - name: "Set API package version tag"
+        id: set-api-version
+        if: startsWith(env.RELEASE_VERSION, 'v1')
+        run: |
+          API_VERSION=sed sed 's/v1/api\/v2/g' <<< "${{ env.RELEASE_VERSION }}"
+          echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
+        env:
+          RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
+
+      # # Check if there's a release tag for cheqd-node and set API version tag
+      # - name: "Push API package version tag"
+      #   id: push-api-version
+      #   run: |
+      #     git tag -a "${{ env.API_VERSION }}" -m "API package version ${{ env.API_VERSION }} [skip ci]"
+      #     git push origin "${{ env.API_VERSION }}" --dry-run
+      #   env:
+      #     API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
+      #     # GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
 
   release-binary:
@@ -91,8 +112,6 @@ jobs:
     if: ${{ needs.calculate-version.outputs.RELEASE_VERSION != '' }}
     env:
       RELEASE_VERSION: ${{ needs.calculate-version.outputs.RELEASE_VERSION }}
-    outputs:
-      API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
     
     steps:
       - uses: actions/checkout@v3
@@ -134,24 +153,6 @@ jobs:
           input: proto
           buf_token: ${{ secrets.BUF_TOKEN }}
           draft: ${{ github.ref_name != 'main'}}
-      
-      # Check if there's a release tag for cheqd-node and set API version tag
-      - name: "Set API package version tag"
-        id: set-api-version
-        if: startsWith(env.RELEASE_VERSION, 'v1')
-        run: |
-          API_VERSION=sed sed 's/v1/api\/v2/g' <<< "${{ steps.set-version.outputs.RELEASE_VERSION }}"
-          echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
-
-      # Check if there's a release tag for cheqd-node and set API version tag
-      - name: "Push API package version tag"
-        id: push-api-version
-        run: |
-          git tag -a "${{ env.API_VERSION }}" -m "API package version ${{ env.API_VERSION }} [skip ci]"
-          git push origin "${{ env.API_VERSION }}" --dry-run
-        env:
-          API_VERSION: ${{ steps.set-api-version.outputs.API_VERSION }}
-          # GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
 
 
   release-docker:
