--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,8 +80,11 @@ jobs:
 
       - name: Set release version number
         id: set-version
+        # run: |
+        #   RELEASE_VERSION=$( git tag --list 'v*' --contains "${{ github.sha }}")
+        #   echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
         run: |
-          RELEASE_VERSION=$( git tag --list 'v*' --contains "${{ github.sha }}")
+          RELEASE_VERSION=$( git tag --list 'v*' --contains "03089249874ed22139ec50ce564273c18a353835")
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
       
       # Check if there's a release tag for cheqd-node and set API version tag
