--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,7 +84,7 @@ jobs:
         #   RELEASE_VERSION=$( git tag --list 'v*' --contains "${{ github.sha }}")
         #   echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
         run: |
-          RELEASE_VERSION=$( git tag --list 'v*' --contains "03089249874ed22139ec50ce564273c18a353835")
+          RELEASE_VERSION=$( git tag --list 'v*' --points-at "03089249874ed22139ec50ce564273c18a353835")
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> "$GITHUB_OUTPUT"
       
       # Check if there's a release tag for cheqd-node and set API version tag
