ci: Fix bug in API_VERSION environment variable
Add semantic release exec

Update release.yml

Switch keep existing mode

Revert "Add semantic release exec"

This reverts commit 1e0a49532a9aed2f1cffa659551baf5911188458.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
         # Replace 'v1' with 'api/v2' to get API package version tag
         # WARNING: This will need to be updated if cheqd-node package version goes beyond v1.x.x
         run: |
-          API_VERSION=$(echo "{{ env.$RELEASE_VERSION }}" | sed 's/v1/api\/v2/g')
+          API_VERSION=$(echo "$RELEASE_VERSION" | sed 's/v1/api\/v2/g')
           echo "API_VERSION=$API_VERSION" >> "$GITHUB_OUTPUT"
         env:
           RELEASE_VERSION: ${{ steps.set-version.outputs.RELEASE_VERSION }}
