feat(installer): Rewrite interactive installer to handle edge cases more robustly [DEV-1900] (#462)
* Refactor code

* Refactor code

* Debug commit

* Do shorter more pythonic statement

* Refactor code

* Refactor code

* Add implementation for creating symlink to cheqd-noded binary

* Add env variable for running fresh installation

* Add env variable DEFAULT_DEBUG_BRANCH

* Set correct testnet chain ID

* Change summary

* Update node-cosmovisor.service

* Update DAEMON settings

* Update template file paths

* Update test.yml

* rename DEFAULT_HOME

* remove DEFAULT_SNAPSHOT_SERVER

* rename CHEQD_NODED_MINIMUM_GAS_PRICES

* rename DEFAULT_LOG_FORMAT

* Add default variables

* rename DEFAULT_CHEQD_HOME_DIR

* set default CHEQD_NODED_MONIKER

* Set defaults for Cosmovisor DAEMON

* Add comments

* Clean up and comment binary install

* Combine binary_path()

* Try and make structure more sensible

* Rename self.setup_system_configs

* Rewrite logging setup

* Replace with logging.info

* Replace failure_exit with logging.exception

* Delete rsyslog_cfg

* Refactor setup_logging_systemd

* Make is_valid_url top level

* Anotate setters

* Try catch interviewer

* Rewrite interviewer

* Delete what Cosmovisor version

* Only keep linter enabled

* Refactor ask for version

* Ask for setup

* Update installer.py

* ask_for_chain

* ask_for_cosmovisor

* ask_for_cosmovisor_bump

* ask_for_daemon_allow_download_binaries

* ask_for_daemon_restart_after_upgrade

* ask_for_moniker

* ask_for_external_address

* P2P and RPC port

* ask_for_persistent_peers

* ask_for_gas_price

* Update installer.py

* Bump mainnet version for docker env

* Update test.yml

* Update go.work.sum

* Add ability to change branch name while in development mode

* Makes changes around sysmted functions

* Fix linter mistakes

* Fix linter mistakes

* Fix linter mistakes



--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,27 +13,65 @@ permissions:
 
 jobs:
 
-  # interactive-installer:
-  #   name: "Interactive Installer"
-  #   runs-on: ubuntu-20.04
+  installer-cosmovisor:
+    name: "Installer - Cosmovisor mode"
+    runs-on: ubuntu-20.04
+    env:
+      PYTHONDEVMODE: 1
+      DEFAULT_DEBUG_BRANCH: ${{ github.ref_name }}
   
-  #   steps:
-  #     - uses: actions/checkout@v3
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: "Fresh install"
-  #       working-directory: ./installer
-  #       run: |
-  #         sudo bash -c "python3 installer.py < install-from-scratch.txt"
+      - name: "Fresh install with Cosmovisor"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/install-from-scratch-cosmovisor.txt"
 
-  #     - name: "Upgrade existing installation"
-  #       working-directory: ./installer
-  #       run: |
-  #         sudo bash -c "python3 installer.py < upgrade-existing.txt"
+      - name: "Upgrade - Keep existing"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/upgrade-existing-cosmovisor.txt"
 
-  #     - name: Debugging with tmate
-  #       if: ${{ failure() }}
-  #       uses: mxschmitt/action-tmate@v3
-  #       timeout-minutes: 10
+      - name: "Upgrade - Fresh install"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/upgrade-fresh-install.txt"
+
+      - name: Debugging with tmate
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 10
+    
+  installer-standalone:
+    name: "Installer - Standalone mode"
+    runs-on: ubuntu-20.04
+    env:
+      PYTHONDEVMODE: 1
+      DEFAULT_DEBUG_BRANCH: ${{ github.ref_name }} 
+    
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: "Fresh install"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/install-from-scratch-standalone.txt"
+
+      - name: "Upgrade existing installation"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/upgrade-existing-standalone.txt"
+      
+      - name: "Upgrade with moving to cosmovisor"
+        working-directory: ./installer
+        run: |
+          sudo -E bash -c "python3 installer.py < tests/upgrade-to-cosmovisor.txt"
+      
+      - name: Debugging with tmate
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 10
 
   unit-tests:
     name: "Unit Tests"
